# nlp_frontend

./: .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
.github/actions/setup/: action.yaml
.github/workflows/: code_quality.yaml
.streamlit/: config.toml
backend/: Dockerfile  main.py  pyproject.toml  test.py
backend/media/processed/5a01ce63-12ff-4a3c-8535-c5872865f2d2/: What is GitHub.srt
backend/media/processed/f38a5255-797e-4913-b93f-c773305404d9/: How Google Search Works (in 5 minutes).de.srt  How Google Search Works (in 5 minutes).srt
backend/media/uploads/: What is GitHub.de.srt
backend/src/bff_api/: root.py
backend/src/bff_api/v1/: __init__.py  main_router.py  upload.py  video.py  videos.py
backend/src/logic/: audio.py  transcription.py  translation.py
backend/src/processing/: pipeline.py
backend/src/services/: __init__.py  audio.py  file_utils.py  srt_writer.py  transcription.py  translation.py
bff_api/: main.py  pyproject.toml
frontend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/.streamlit/: config.toml
frontend/src/: app.py
frontend/src/pages/: 1_⬆️_Upload.py  2_🎬_Library.py  test.py
frontend/src/utils/: page_setup.py
src/frontend/: __init__.py  app.py
src/frontend/pages/: 1_⬆️_Upload.py  2_🎬_Library.py
src/frontend/utils/: page_setup.py
