[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Philipp Meyer", email = "philippmeyer2003@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]

[project.scripts]
frontend = "frontend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
